comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, delectus. Sed cum quo velit, error placeat alias quas provident beatae fugiat deleniti, vero molestias cumque dolore repellendus quae molestiae perferendis?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nobis quos eos ab deleniti illo, doloribus amet cumque ad aliquam debitis et. Laboriosam, dignissimos cumque? Inventore in veniam dicta delectus?</p>
         </article>
     </main>
 </body>
