--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h2>Curso de JavaScript</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nobis quos eos ab deleniti illo, doloribus amet cumque ad aliquam debitis et. Laboriosam, dignissimos cumque? Inventore in veniam dicta delectus?</p>
             <p>modifiquei</p>
+            <p>outra linha</p>
         </article>
     </main>
 </body>
