--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nobis quos eos ab deleniti illo, doloribus amet cumque ad aliquam debitis et. Laboriosam, dignissimos cumque? Inventore in veniam dicta delectus?</p>
             <p>modifiquei</p>
             <p>outra linha</p>
+            <h3>Criando um h3</h3>
         </article>
     </main>
 </body>
